--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -5,6 +5,20 @@
     <title>Title</title>
 </head>
 <body>
-{{ question }}
+{% if error_message %}<p>
+    <strong>{{ error_message }}</strong></p>
+{% endif %}
+
+<!-- POST form -- modifies data -->
+<form action="{% url 'polls:vote' question.id %}" method="post">
+    <!--Cross Site Request Forgeries protection.
+    All POST forms that are targeted at internal URLs should use the {% csrf_token %} template tag-->
+    {% csrf_token %}
+    {% for choice in question.choice_set.all %}
+    <input id="choice{{ forloop.counter }}" name="choice" type="radio" value="{{ choice.id }}">
+    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+    {% endfor %}
+    <input type="submit" value="Vote">
+</form>
 </body>
 </html>
