--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -5,9 +5,9 @@
     <title>My test page</title>
 </head>
 <body>
-{% if latest_question_list %}
+{% if question_list %}
 <ul>
-    {% for question in latest_question_list %}
+    {% for question in question_list %}
     <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
 </ul>
@@ -16,6 +16,3 @@
 {% endif %}l>
 </body>
 </html>
-
-
-
